<resources>
    <string name="app_name">3n Lotta</string>
    <string name="facebook_app_id">526677235279371</string>
    <string name="fb_login_protocol_scheme">fb526677235279371</string>
    <string name="home">Home</string>
    <string name="my_wallet">My Wallet</string>
    <string name="my_play">My Plays</string>
    <string name="all_winners">All Winners</string>
    <string name="refer_a_friend">Refer a Friend</string>
    <string name="help">Help</string>
    <string name="setting">Setting</string>
    <string name="terms_and_policy"><![CDATA[Terms & Policy]]></string>
    <string name="logout">Logout</string>
    <string name="participate_n_in_draw">Participate \nIn Draw</string>
    <string name="start">Start</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="dont_hav_account_sign_up"><![CDATA[<font color=#000000>Don’t have an account? </font> <font color=#0DDAB1>Sign Up</font>]]></string>
    <string name="already_hav_account_sign_in"><![CDATA[<font color=#000000>Already have an account? </font> <font color=#0DDAB1>Sign In</font>]]></string>
    <string name="or_connect_with">Or connect with</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="last_winners">Last Winners</string>
    <string name="sign_up_now">Sign Up Now</string>
    <string name="log_in_now">Log In Now</string>
    <string name="email">Email</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="mobile_no">Mobile Number</string>
    <string name="otp">OTP</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_user_name">Enter user name</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_email">Enter email</string>
    <string name="select_gender">Select gender</string>
    <string name="select_dob">Select date of birth</string>
    <string name="select_country">Select country</string>
    <string name="enter_mobile">Enter mobile no.</string>
    <string name="send_otp">Send OTP</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="my_plays">My Plays</string>
    <string name="rank">Rank</string>
    <string name="date">Date</string>
    <string name="entree_fees">Entree Fees:</string>
    <string name="loss">Loss</string>
    <string name="win">Win</string>
    <string name="contact_us">Contact Us</string>
    <string name="send_us_a_message">Send us a message</string>
    <string name="name">Name</string>
    <string name="preferred_method_of_communication">Preferred method of communication</string>
    <string name="phone">Phone</string>
    <string name="message">Message</string>
    <string name="submit">Submit</string>
    <string name="history">History</string>
    <string name="your_balance">Your Balance</string>
    <string name="last_withdraw">Last Withdraw</string>
    <string name="withdraw_money">Withdraw Money</string>
    <string name="account_number">Account Number</string>
    <string name="confirm_account_number">Confirm Account Number</string>
    <string name="branch_code">Branch Code</string>
    <string name="amount_to_be_withdrawn">Amount to be Withdrawn</string>
    <string name="phone_no">Phone Number</string>
    <string name="withdrawn">Withdrawn</string>
    <string name="refer_friend_msg">Share your code with your friends and get exciting bonus</string>
    <string name="share">Share</string>
    <string name="refer">Refer</string>
    <string name="refer_and_earn">Refer and Earn</string>
    <string name="your_feedback_is_valuable_to_us">Your feedback is valuable to us</string>
    <string name="give_us_your_feedback">Give Us Your Feedback</string>
    <string name="write_your_review">Write your review</string>
    <string name="write_review_msg">Would you like to write anything about 3nLotta?</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="register_for_draw">Register for Draw</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="gender">Gender</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="rules">Rules</string>
    <string name="authenticating_user">Authenticating user</string>
    <string name="terms_and_rules">Terms and Rules</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="feedback">FeedBack</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="i_am_18_and_i_accept_terms_and_conditions">I am 18+ and I accept terms and conditions</string>
    <string name="loading">Loading</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="profile">Profile</string>
    <string name="save">Save</string>
    <string name="change_password">Change Password</string>
    <string name="create_new_password">Create new password</string>
    <string name="your_new_password_must_be_different_from_previous_used_passwords">Your new password must be different from previous used passwords.</string>
    <string name="previous_password">Previous password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="must_be_at_least_5_characters">Must be at least 5 characters</string>
    <string name="both_password_must_match">Both password must match</string>
    <string name="a_code_has_been_sent_to_your_registered_email_and_mobile_number">A code has been sent to your registered email and mobile number.</string>
    <string name="enter_code">Enter code</string>
    <string name="ac_no">Ac/No:</string>
    <string name="date_col">Date:</string>
    <string name="how_to_play">How to play?</string>
    <string name="how_to_play_title">How to play</string>
    <string name="language">Language</string>
    <string name="sounds">Sounds</string>
    <string name="vibration">Vibration</string>
    <string name="notification">Notification</string>
    <string name="push">Push</string>
    <string name="lorem_ipsumum"><![CDATA[<h1>Quae hic rei publicae vulnera inponebat, eadem ille sanabat.</h1><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ea possunt paria non esse. Bestiarum vero nullum iudicium puto. Contineo me ab exemplis. Suo genere perveniant ad extremum; Si qua in iis corrigere voluit, deteriora fecit. </p><p>Duo Reges: constructio interrete. <b>Videamus animi partes, quarum est conspectus illustrior;</b> Quid igitur, inquit, eos responsuros putas? Contineo me ab exemplis. </p><ol><li>Potius ergo illa dicantur: turpe esse, viri non esse debilitari dolore, frangi, succumbere.</li><li>Facete M.</li></ol>]]></string>
    <string name="entry_fees">Entry fees</string>
    <string name="enter_current_password">Enter current password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="enter_confirm_password">Enter confirm password</string>
    <string name="password_not_matching">New password and confirm password not matching</string>
    <string name="saving">Saving</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_message">Enter message</string>
    <string name="thank_you_contact_us">Thank you for contact with us, we will reach you soon.</string>
    <string name="enter_account_no">Enter account number</string>
    <string name="enter_confirm_account_no">Enter confirm account number</string>
    <string name="enter_branch_code">Enter branch code</string>
    <string name="accont_no_not_matching">Enterd account number not matching</string>
    <string name="enter_amount">Enter withdrawn amount</string>
    <string name="enter_valid_amount">Enter valid withdrawn amount</string>
    <string name="request_submiting">Request submitting</string>
    <string name="thank_you_your_request_has_been_submited">Your request has been submitted.</string>
    <string name="creating_user">Creating user</string>
    <string name="i_agree_to_the_terms_and_conditions">I agree to the Terms And Conditions</string>
    <string name="please_accept_and_agree">Please accept and agree to the Terms and Conditions</string>
    <string name="_1_star">1-Star</string>
    <string name="_2_star">2-Star</string>
    <string name="_3_star">3-Star</string>
    <string name="_4_star">4-Star</string>
    <string name="_5_star">5-Star</string>
    <string name="characters_remaining">characters remaining</string>
    <string name="enter_min_5_char_in_review">Enter min 5 characters in review</string>
    <string name="thank_you_for_your_feedback">Thank you for your valuable feedback.</string>
    <string name="money_withdrawal">Money withdrawal</string>
    <string name="pending">Pending</string>
    <string name="your_request_will_be_process">Your request will be process soon. Once completed you will be notified.</string>
    <string name="money_will_reach_to_you_soon">Money Will Reach To You Soon</string>
    <string name="select_tickets">Select Tickets</string>
    <string name="tickets_already_sold">Tickets already sold</string>

    <string name="note">Note</string>
    <string name="status">Status</string>
    <string name="allow">Allow</string>
    <string name="deny">Deny</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="otp_one_time_password">OTP (One Time Password)</string>
    <string name="select_city">Select city</string>
    <string name="select_state">Select state</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="how_to_win">How to win</string>
    <string name="you_have_not_registered_any_draw">You have not registered any draw</string>
    <string name="do_you_want_to_logout">Do you want to logout ?</string>
    <string name="enter_valid_mobile_number">Enter valid mobile number</string>
    <string name="names_on_account">Names on Account</string>
    <string name="bic_swift_code_of_the_bank">Bic/Swift code of the bank</string>
    <string name="enter_bank_name">Enter bank name</string>
    <string name="enter_name_in_account">Enter name in account</string>
    <string name="enter_bin_swift_code_of_bank">Enter Bin/Swift code of bank</string>
    <string name="for_registering">For Registering</string>

</resources>