<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.ForgotPasswordActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:layout_height="@dimen/_40sdp">
        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back_ios"
            android:layout_gravity="center_vertical"
            android:paddingStart="@dimen/_8sdp"
            android:layout_marginStart="@dimen/_8sdp"
            app:tint="@color/colorAccent" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/forgot_password_title"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:textSize="@dimen/_14sdp"
            />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8sdp"
        android:textColor="@color/black"
        android:text="@string/a_code_has_been_sent_to_your_registered_email_and_mobile_number"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/enter_code"
        android:textColor="@color/black" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:maxLength="6"
        android:background="@drawable/rounded_edittext"
        android:backgroundTint="@color/gray"
        android:inputType="number"
        android:padding="@dimen/_6sdp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:text="@string/new_password"
        android:textColor="@color/black" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@drawable/rounded_edittext"
        android:backgroundTint="@color/gray"
        android:inputType="textPassword"
        android:padding="@dimen/_6sdp"

        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:textColor="@color/black"
        android:text="@string/must_be_at_least_5_characters"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:text="@string/confirm_password"
        android:textColor="@color/black" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@drawable/rounded_edittext"
        android:backgroundTint="@color/gray"
        android:inputType="textPassword"
        android:padding="@dimen/_6sdp"

        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:textColor="@color/black"
        android:text="@string/both_password_must_match"
        />


    <Button
        android:id="@+id/btSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:background="@drawable/rounded_edittext"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@color/white"
        />
</LinearLayout>