<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.FeedbackActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:layout_height="@dimen/_40sdp">
        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back_ios"
            android:layout_gravity="center_vertical"
            android:paddingStart="@dimen/_8sdp"
            android:layout_marginStart="@dimen/_8sdp"
            app:tint="@color/colorAccent" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/feedback"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:textSize="@dimen/_14sdp"
            />
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_8sdp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_8sdp"
                android:background="@drawable/rounded_corner"
                android:backgroundTint="@color/gray"
                >
                <RatingBar
                    android:id="@+id/ratingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:rating="5"
                    android:max="5"
                    android:progressTint="@color/colorPrimary"
                    android:secondaryProgressTint="@color/colorPrimary"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_gravity="center_horizontal"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/give_us_your_feedback"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/_16sdp"
                    android:textStyle="bold"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/your_feedback_is_valuable_to_us"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:layout_marginBottom="@dimen/_16sdp"
                    >
                    <Button
                        android:id="@+id/bt1star"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorPrimary"
                        android:text="@string/_1_star"
                        android:textAllCaps="false"
                        android:textSize="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:textColor="@color/white"
                        />
                    <Button
                        android:id="@+id/bt2star"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorPrimary"
                        android:text="@string/_2_star"
                        android:textAllCaps="false"
                        android:textSize="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:textColor="@color/white"
                        />
                    <Button
                        android:id="@+id/bt3star"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorPrimary"
                        android:text="@string/_3_star"
                        android:textAllCaps="false"
                        android:textSize="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:textColor="@color/white"
                        />
                    <Button
                        android:id="@+id/bt4star"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorPrimary"
                        android:text="@string/_4_star"
                        android:textAllCaps="false"
                        android:textSize="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:textColor="@color/white"
                        />
                    <Button
                        android:id="@+id/bt5star"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorPrimary"
                        android:text="@string/_5_star"
                        android:textAllCaps="false"
                        android:textSize="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:textColor="@color/white"
                        />
                </LinearLayout>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/write_your_review"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:textStyle="bold"
                />
            <EditText
                android:id="@+id/etReview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_8sdp"
                android:background="@drawable/rounded_corner"
                android:backgroundTint="@color/gray"
                android:lines="6"
                android:layout_marginTop="@dimen/_8sdp"
                android:hint="@string/write_review_msg"
                android:gravity="start"
                />
            <TextView
                android:id="@+id/tvRemaining"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/characters_remaining"
                android:layout_gravity="end"
                android:textColor="@color/black"
                />

            <Button
                android:id="@+id/btSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_edittext"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/_16sdp"
                />
        </LinearLayout>
    </ScrollView>
</LinearLayout>